--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "peerDependencies": {
     "svelte": ">=3"
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@types/estree": "^0.0.50",
