--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/preset-env": "^7.14.7",
     "@types/estree": "^0.0.50",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.3",
+    "@types/node": "^16.4.1",
     "babel-jest": "^27.0.6",
     "jest": "^27.0.6",
     "locate-character": "^2.0.5",
@@ -39,6 +39,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "immer": "^9.0.5"
+    "immer": "^9.0.5",
+    "periscopic": "^3.0.4"
   }
 }
